<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Willow</string>
    <string name="level1">स्तर 1</string>
    <string name="level2">स्तर 2</string>
    <string name="level3">स्तर 3</string>
    <string name="level4">स्तर 4</string>
    <string name="level5">स्तर 5</string>
    <string name="hello_world">Hello world!</string>
    <string name="hindi_hindi">हिन्दी</string>
    <string name="telugu_telugu">తెలుగు</string>
    <string name="bengali_bengali">বিংগালী</string>
    <string name="english_english">English</string>
    <string name="action_settings">सेट्टिंग्स</string>
    <string name="title_activity_main_menu">Willow</string>
    <string name="title_activity_play_game">खेलिए</string>
    <string name="title_activity_game_result">GameResult</string>
    <string name="title_activity_tutorial">शिक्षण</string>
    <string name="title_activity_practice">अभ्यास</string>
    <string name="waiting_for_a_match">प्रतीक्षा कीजिए</string>
    <string name="title_activity_cover">CoverActivity</string>
    <string name="title_activity_fragment_image_question">FragmentImageQuestion</string>
    <string name="title_activity_fragment_text_mcquestion">FragmentTextMCQuestion</string>
    <string name="entername">आपका नाम</string>
    <string name="rematch">फिरसे</string>

</resources>
