<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:layout_alignParentTop="true">

        <Button
            android:background="@color/light_blue_400"
            android:textColor="@color/grey_50"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hindi_hindi"
            android:id="@+id/button_lang_hindi"
            android:layout_gravity="center_horizontal"
            android:onClick="setLanguage" />

        <Button
            android:background="@color/light_blue_400"
            android:textColor="@color/grey_50"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telugu_telugu"
            android:id="@+id/button_lang_telugu"
            android:layout_gravity="center_horizontal"
            android:onClick="setLanguage" />

        <Button
            android:background="@color/light_blue_400"
            android:textColor="@color/grey_50"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bengali_bengali"
            android:id="@+id/button_lang_bengali"
            android:layout_gravity="center_horizontal"
            android:onClick="setLanguage" />

        <Button
            android:background="@color/light_blue_400"
            android:textColor="@color/grey_50"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/english_english"
            android:id="@+id/button_lang_english"
            android:layout_gravity="center_horizontal"
            android:onClick="setLanguage" />
    </LinearLayout>
</RelativeLayout>
