<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mavidser.willow.GameResult"
    android:orientation="vertical"
    android:gravity="center">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Score"-->
        <!--android:textSize="@dimen/abc_text_size_display_1_material"-->
        <!--android:id="@+id/result_id"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true" />-->

    <Button
        android:background="@color/light_blue_400"
        android:textColor="@color/grey_50"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rematch"
        android:id="@+id/rematch_button"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/result_id"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@color/light_blue_400"
        android:textColor="@color/grey_50"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_tutorial"
        android:id="@+id/tutorial_button"
        android:layout_below="@+id/rematch_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <Button
        android:background="@color/light_blue_400"
        android:textColor="@color/grey_50"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_practice"
        android:id="@+id/practice_button"
        android:layout_below="@+id/tutorial_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />
</LinearLayout>
